deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-deployment
  namespace: static1
spec:
  selector:
    matchLabels:
      app: static-dept
  replicas: 5 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: static-dept
    spec:
      containers:
      - name: static
        image: 274401088258.dkr.ecr.us-west-2.amazonaws.com/static:number
        ports:
        - containerPort: 80
