service.yml
apiVersion: v1
kind: Service
metadata:
  name: static1-svc
  namespace: static1
spec:
  selector:
    app: static1-dept
  ports:
  - port: 80
    targetPort: 80
